[package]
name = "hello-actix"
version = "0.1.0"
authors = ["marcosjlima <marcos_jlima@yahoo.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"